--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "@material-ui/icons": "^4.2.1",
     "@reach/router": "^1.2.1",
     "@rematch/core": "^1.1.0",
+    "@rematch/select": "^2.0.5",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
     "formik": "^1.5.7",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "rematch": "^0.1.3",
     "reselect": "^4.0.0"
   },
